refactor: enhance Branch and Franchise classes with unmodifiable list accessors and simplify product handling